# freelance-copilot

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  README_DEVELOPMENT_PROCESS.md  docker-compose.yml  start.ps1
backend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_phase2_analysis_scoring.py  0003_phase3_portfolio.py  0004_phase4_resume.py  0005_phase5_proposal.py  0006_phase6_application.py  0007_phase8_repository.py  0008_phase9_stack_requirements.py  0009_phase10_proposal_strategy.py  0010_phase14_repo_star_story.py  0011_phase15_implementation_plan.py  0012_phase16_proposal_diagrams.py  0013_phase17_repo_path_index.py  0014_phase18_company_research.py  0015_phase_a_email_otp.py  0016_phase_b_catalog_and_pot.py  0017_phase_b_graph_core.py  0018_phase_b_seed_catalog.py  0019_phase_b_backfill.py  0020_phase_c_personas.py  0021_phase_c_seed_archetypes.py  0022_phase_c_backfill_primary.py  0023_phase_d_ingestion.py  0024_phase_e_match_reports.py  0025_phase_f_outputs.py  0026_phase_h_tracker.py  0027_widen_profile_version.py  0028_phase_k_student_persona.py  0029_phase_k_student_department.py  0030_phase_l_usage_events.py  0031_phase_l_admin_users.py  0032_phase_k_student_dob.py  0033_phase_l_cv_templates.py  0034_phase_m_feedback_entries.py  0035_phase_n_photo_transform.py  0036_phase_o_career_pack.py  0037_career_pack_usage_kinds.py  0038_backfill_students.py  0039_cv_docx_usage_kind.py  0040_add_internship_entry_kind.py  (+6 more)
backend/app/: main.py
backend/app/api/: uploads.py
backend/app/api/v1/: router.py
backend/app/application/: email_templates.py  url_policy.py
backend/app/application/dto/: admin_auth_dto.py  admin_dto.py  analysis_dto.py  analytics_dto.py  application_dto.py  auth_dto.py  career_fitness_dto.py  career_pack_dto.py  confidence_dto.py  dev_dto.py  evidence_dto.py  feedback_dto.py  ingestion_dto.py  job_dto.py  job_import_dto.py  match_report_dto.py  output_dto.py  persona_dto.py  portfolio_dto.py  portfolio_story_dto.py  proposal_dto.py  repository_dto.py  repository_improvement_dto.py  resume_dto.py  student_dto.py  tracker_dto.py
backend/app/application/services/: admin_auth_service.py  admin_service.py  analytics_extraction.py  analytics_service.py  application_service.py  application_snapshot.py  auth_service.py  career_fitness_service.py  career_pack_service.py  citation_service.py  company_research_service.py  cv_ingest_service.py  cv_structuring.py  cv_template_service.py  daily_report_service.py  email_otp_service.py  feedback_service.py  gap_recommendation_service.py  job_analysis_service.py  job_confidence_service.py  job_import_prompts.py  job_import_service.py  job_service.py  knowledge_graph_service.py  leadership_signals.py  linkedin_ingest_service.py  llm_cost.py  market_signal_service.py  match_report_service.py  output_generation_service.py  output_prompts.py  password_reset_service.py  persona_profile_resolver.py  persona_service.py  portfolio_matching_service.py  portfolio_service.py  portfolio_story_service.py  prompts.py  proposal_context.py  proposal_generation_service.py  (+19 more)
backend/app/core/: config.py  database.py  deps.py  rate_limit.py  request_size_limit.py  security.py
backend/app/domain/: exceptions.py
backend/app/domain/analytics/: definitions.py
backend/app/domain/entities/: admin_user.py  analysis.py  application.py  email_otp.py  experience.py  ingestion.py  job.py  match_report.py  output.py  password_reset_token.py  persona.py  portfolio.py  project.py  proposal.py  refresh_token.py  repository.py  resume.py  skill_catalog.py  tracker.py  user.py  user_skill.py
backend/app/domain/profiles/: __init__.py  freelancer_profile.py
backend/app/domain/providers/: ai_provider.py  blob_store.py  email_provider.py  embedding_provider.py
backend/app/domain/repositories/: analysis_repository.py  application_repository.py  email_otp_repository.py  embedding_repository.py  experience_repository.py  ingestion_repositories.py  job_repository.py  match_report_repository.py  output_repository.py  password_reset_token_repository.py  persona_repository.py  portfolio_repository.py  proposal_repository.py  repository_store.py  resume_repository.py  skill_catalog_repository.py  tracker_repositories.py  user_repository.py  user_skill_repository.py
backend/app/domain/services/: application_state_machine.py  email_normalization.py
backend/app/infrastructure/ai/: claude_provider.py  embedding_factory.py  errors.py  factory.py  mock_embedding_provider.py  mock_provider.py  openai_embedding_provider.py  openai_provider.py
backend/app/infrastructure/db/: advisory_lock.py  base.py
backend/app/infrastructure/email/: errors.py  factory.py  mock_provider.py  resend_provider.py  template_renderer.py
backend/app/infrastructure/github/: github_client.py
backend/app/infrastructure/http/: url_fetcher.py
backend/app/infrastructure/storage/: factory.py  (+3 more)
backend/app/scripts/: create_admin.py  promote_superuser.py  seed.py
backend/tests/: conftest.py  factories.py  test_analysis_service.py  test_analytics_definitions.py  test_analytics_extraction.py  test_analytics_service.py  test_api_admin.py  test_api_analysis.py  test_api_analytics.py  test_api_applications.py  test_api_auth_live.py  test_api_dev_mailbox.py  test_api_job_import.py  test_api_portfolio.py  test_api_proposals.py  test_api_resumes.py  test_api_students.py  test_application_service.py  test_application_state_machine.py  test_architecture.py  test_auth_reset_password.py  test_create_admin.py  test_cv_template_service.py  test_daily_report_renderer.py  test_email_templates.py  test_hardening.py  test_job_import_service.py  test_mock_embedding.py  test_mock_provider.py  test_portfolio_matching.py  test_portfolio_service.py  test_proposal_context.py  test_proposal_generation.py  test_proposal_review.py  test_refresh_rotation.py  test_resume_recommendation.py  test_resume_service.py  test_scoring.py  test_security.py  test_stack_category_aliases.py  (+4 more)
(+443 files in other folders)
