[project]
name = "upwork-intel-backend"
version = "0.1.0"
description = "Upwork Intelligence Platform — backend"
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<5",
    "pyjwt>=2.10",
    "python-multipart>=0.0.20",
    "pgvector>=0.3.6",
    "email-validator>=2.2",
    "httpx>=0.28",
    "pdfminer.six>=20240706",
    "python-docx>=1.1.2",
    "jinja2>=3.1.4",
    # Cloud Run uses GCS for student photos + ingestion uploads. Optional
    # in dev (LocalBlobStore is the default), so the import is lazy.
    "google-cloud-storage>=2.18",
    # WeasyPrint needs system libs (cairo, pango, gdk-pixbuf). The Docker
    # image installs them; local dev without them gets a clean 503 from
    # /students/cv.pdf with a hint pointing at the Dockerfile.
    "weasyprint>=63.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "anyio>=4.6",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "RUF"]
ignore = [
    "B008",   # FastAPI uses Depends() in defaults
    "E402",   # module-import-not-at-top-of-file — jobs.py & job_repo have intentional deferred imports for SQLAlchemy mapper registry ordering
    "E501",   # line-too-long — formatter handles it; bare prose lines (docstrings, prompts) routinely exceed 100
    "N818",   # exception-name — our `*Unavailable` errors describe states, not generic errors; renaming to `*UnavailableError` is noise
    "RUF001", # ambiguous-unicode-character-string — we deliberately use em/en dashes in docstrings + prompts
    "RUF002", # same, in docstrings
    "RUF003", # same, in comments
    "RUF046", # unnecessary-cast-to-int — `int(round(x))` is more explicit than `round(x)` in scoring code
]

[tool.ruff.lint.per-file-ignores]
# The DOCX renderer names its locals after the OOXML tag they wrap
# (`rPr`, `pPr`, `pBdr`, `tcPr`, `tblPr`). Renaming them to snake_case
# hides the correspondence to the spec, which is the only reason
# anyone reading this code will ever grep for those tokens. Same for
# image dimensions (`W`, `H`, `NW`, `NH`) in the photo transform —
# they mirror the PIL/CSS-cover math and lowercase would just add
# noise.
"app/application/services/student_cv_docx_renderer.py" = ["N802", "N806"]
"tests/test_student_cv_docx_renderer.py" = ["N806"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
